@@ -43,7 +43,8 @@ terms: it makes a cascade of let-expressions within the derivation tree
 and may thus improve scalability.
 
 * New attribute "trace_locales" for tracing activation of locale
-instances during roundup.
+instances during roundup.  It replaces the diagnostic command
+'print_dependencies', which was removed.
 
 
 *** Isabelle/jEdit Prover IDE ***
